fix for my account login error not showing on rows.
git-svn-id: https://plugins.svn.wordpress.org/wp-easycart/trunk@913559 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/design/theme/base-responsive-v2/ec_account_login/ec_account_login.css
+++ b/design/theme/base-responsive-v2/ec_account_login/ec_account_login.css
@@ -232,7 +232,7 @@
 	float: left;
 	height: 35px;
 }
-.ec_account_login_row_error .ec_account_login_label {
+.ec_account_login_row_error .ec_account_login_row_label {
 	color: [error_text];
 }
 .ec_account_login_row_error .ec_account_login_input_field {
